# mindmap-app

./: .gitignore  README.md
.github/workflows/: deploy-backend.yml  keep-db-awake.yml
backend/: .dockerignore  Dockerfile  keep_alive.py  pyproject.toml
backend/app/: agents.py  auth.py  config.py  logger.py  main.py  neo4j_client.py  schemas.py
backend/test/: __init__.py  test_delete.py  test_imports.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Breadcrumbs.tsx  DetailSidebar.tsx  Login.tsx  MindmapCanvas.tsx  TopicInput.tsx
frontend/src/utils/: exportTemplate.ts
steering/: product.md  structure.md  tech.md
