[project]
name = "mindmap-backend"
version = "0.1.0"
description = "FastAPI Backend for Agentic Mindmap application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "neo4j>=5.21.0",
    "google-genai>=0.1.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rich>=13.7.0",
    "pyjwt>=2.13.0",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.32",
]
